@@ -26,12 +26,13 @@ import org.elasticsearch.client.WarningsHandler;
 import org.elasticsearch.client.sniff.ElasticsearchNodesSniffer;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.common.Strings;
+import org.elasticsearch.common.VersionId;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.xcontent.support.XContentMapValues;
 import org.elasticsearch.core.IOUtils;
-import org.elasticsearch.core.Tuple;
 import org.elasticsearch.test.ClasspathUtils;
 import org.elasticsearch.test.rest.ESRestTestCase;
+import org.elasticsearch.test.rest.TestFeatureService;
 import org.elasticsearch.test.rest.yaml.restspec.ClientYamlSuiteRestApi;
 import org.elasticsearch.test.rest.yaml.restspec.ClientYamlSuiteRestSpec;
 import org.elasticsearch.test.rest.yaml.section.ClientYamlTestSection;
@@ -139,21 +140,38 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
             validateSpec(restSpec);
             restSpecification = restSpec;
             final List<HttpHost> hosts = getClusterHosts();
-            Tuple<Version, Version> versionVersionTuple = readVersionsFromCatNodes(adminClient());
-            final Version esVersion = versionVersionTuple.v1();
-            final Version masterVersion = versionVersionTuple.v2();
+            final Set<String> nodesVersions = getCachedNodesVersions();
             final String os = readOsFromNodesInfo(adminClient());
 
-            logger.info(
-                "initializing client, minimum es version [{}], master version, [{}], hosts {}, os [{}]",
-                esVersion,
-                masterVersion,
-                hosts,
-                os
+            logger.info("initializing client, node versions [{}], hosts {}, os [{}]", nodesVersions, hosts, os);
+
+            var semanticNodeVersions = nodesVersions.stream()
+                .map(ESRestTestCase::parseLegacyVersion)
+                .flatMap(Optional::stream)
+                .collect(Collectors.toSet());
+            final TestFeatureService testFeatureService = createTestFeatureService(
+                getClusterStateFeatures(adminClient()),
+                semanticNodeVersions
             );
-            clientYamlTestClient = initClientYamlTestClient(restSpec, client(), hosts, esVersion, masterVersion, os);
-            restTestExecutionContext = createRestTestExecutionContext(testCandidate, clientYamlTestClient);
-            adminExecutionContext = new ClientYamlTestExecutionContext(testCandidate, clientYamlTestClient, false);
+
+            logger.info("initializing client, node versions [{}], hosts {}, os [{}]", nodesVersions, hosts, os);
+
+            clientYamlTestClient = initClientYamlTestClient(restSpec, client(), hosts);
+            restTestExecutionContext = createRestTestExecutionContext(
+                testCandidate,
+                clientYamlTestClient,
+                nodesVersions,
+                testFeatureService,
+                Set.of(os)
+            );
+            adminExecutionContext = new ClientYamlTestExecutionContext(
+                testCandidate,
+                clientYamlTestClient,
+                false,
+                nodesVersions,
+                testFeatureService,
+                Set.of(os)
+            );
             final String[] blacklist = resolvePathsProperty(REST_TESTS_BLACKLIST, null);
             blacklistPathMatchers = new ArrayList<>();
             for (final String entry : blacklist) {
@@ -179,20 +197,27 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
      */
     protected ClientYamlTestExecutionContext createRestTestExecutionContext(
         ClientYamlTestCandidate clientYamlTestCandidate,
-        ClientYamlTestClient clientYamlTestClient
+        ClientYamlTestClient clientYamlTestClient,
+        final Set<String> nodesVersions,
+        final TestFeatureService testFeatureService,
+        final Set<String> osSet
     ) {
-        return new ClientYamlTestExecutionContext(clientYamlTestCandidate, clientYamlTestClient, randomizeContentType());
+        return new ClientYamlTestExecutionContext(
+            clientYamlTestCandidate,
+            clientYamlTestClient,
+            randomizeContentType(),
+            nodesVersions,
+            testFeatureService,
+            osSet
+        );
     }
 
     protected ClientYamlTestClient initClientYamlTestClient(
         final ClientYamlSuiteRestSpec restSpec,
         final RestClient restClient,
-        final List<HttpHost> hosts,
-        final Version esVersion,
-        final Version masterVersion,
-        final String os
+        final List<HttpHost> hosts
     ) {
-        return new ClientYamlTestClient(restSpec, restClient, hosts, esVersion, masterVersion, os, this::getClientBuilderWithSniffedHosts);
+        return new ClientYamlTestClient(restSpec, restClient, hosts, this::getClientBuilderWithSniffedHosts);
     }
 
     @AfterClass
@@ -299,13 +324,15 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
             for (String strPath : paths) {
                 Path path = root.resolve(strPath);
                 if (Files.isDirectory(path)) {
-                    Files.walk(path).forEach(file -> {
-                        if (file.toString().endsWith(".yml")) {
-                            addSuite(root, file, files);
-                        } else if (file.toString().endsWith(".yaml")) {
-                            throw new IllegalArgumentException("yaml files are no longer supported: " + file);
-                        }
-                    });
+                    try (var filesStream = Files.walk(path)) {
+                        filesStream.forEach(file -> {
+                            if (file.toString().endsWith(".yml")) {
+                                addSuite(root, file, files);
+                            } else if (file.toString().endsWith(".yaml")) {
+                                throw new IllegalArgumentException("yaml files are no longer supported: " + file);
+                            }
+                        });
+                    }
                 } else {
                     path = root.resolve(strPath + ".yml");
                     assert Files.exists(path) : "Path " + path + " does not exist in YAML test root";
@@ -326,7 +353,7 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
         }
 
         filesSet.add(file);
-        List<String> fileNames = filesSet.stream().map(p -> p.getFileName().toString()).collect(Collectors.toList());
+        List<String> fileNames = filesSet.stream().map(p -> p.getFileName().toString()).toList();
         if (Collections.frequency(fileNames, file.getFileName().toString()) > 1) {
             Logger logger = LogManager.getLogger(ESClientYamlSuiteTestCase.class);
             logger.warn(
@@ -382,36 +409,7 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
         }
     }
 
-    Tuple<Version, Version> readVersionsFromCatNodes(RestClient restClient) throws IOException {
-        // we simply go to the _cat/nodes API and parse all versions in the cluster
-        final Request request = new Request("GET", "/_cat/nodes");
-        request.addParameter("h", "version,master");
-        request.setOptions(getCatNodesVersionMasterRequestOptions());
-        Response response = restClient.performRequest(request);
-        ClientYamlTestResponse restTestResponse = new ClientYamlTestResponse(response);
-        String nodesCatResponse = restTestResponse.getBodyAsString();
-        String[] split = nodesCatResponse.split("\n");
-        Version version = null;
-        Version masterVersion = null;
-        for (String perNode : split) {
-            final String[] versionAndMaster = perNode.split("\\s+");
-            assert versionAndMaster.length == 2 : "invalid line: " + perNode + " length: " + versionAndMaster.length;
-            final Version currentVersion = Version.fromString(versionAndMaster[0]);
-            final boolean master = versionAndMaster[1].trim().equals("*");
-            if (master) {
-                assert masterVersion == null;
-                masterVersion = currentVersion;
-            }
-            if (version == null) {
-                version = currentVersion;
-            } else if (version.onOrAfter(currentVersion)) {
-                version = currentVersion;
-            }
-        }
-        return new Tuple<>(version, masterVersion);
-    }
-
-    String readOsFromNodesInfo(RestClient restClient) throws IOException {
+    static String readOsFromNodesInfo(RestClient restClient) throws IOException {
         final Request request = new Request("GET", "/_nodes/os");
         Response response = restClient.performRequest(request);
         ClientYamlTestResponse restTestResponse = new ClientYamlTestResponse(response);
@@ -439,10 +437,6 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
         return osPrettyNames.last();
     }
 
-    protected RequestOptions getCatNodesVersionMasterRequestOptions() {
-        return RequestOptions.DEFAULT;
-    }
-
     public void test() throws IOException {
         // skip test if it matches one of the blacklist globs
         for (BlacklistedPathPatternMatcher blacklistedPathMatcher : blacklistPathMatchers) {
@@ -453,20 +447,31 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
             );
         }
 
+        // Try to extract the minimum node version. Assume CURRENT if nodes have non-semantic versions
+        // TODO: after https://github.com/elastic/elasticsearch/pull/103404 is merged, we can push this logic into SkipVersionContext.
+        // This way will have version parsing only when we actually have to skip on a version, we can remove the default and throw an
+        // IllegalArgumentException instead (attempting to skip on version where version is not semantic)
+        var oldestNodeVersion = restTestExecutionContext.nodesVersions()
+            .stream()
+            .map(ESRestTestCase::parseLegacyVersion)
+            .flatMap(Optional::stream)
+            .min(VersionId::compareTo)
+            .orElse(Version.CURRENT);
+
         // skip test if the whole suite (yaml file) is disabled
         assumeFalse(
             testCandidate.getSetupSection().getSkipSection().getSkipMessage(testCandidate.getSuitePath()),
-            testCandidate.getSetupSection().getSkipSection().skip(restTestExecutionContext.esVersion())
+            testCandidate.getSetupSection().getSkipSection().skip(oldestNodeVersion)
         );
         // skip test if the whole suite (yaml file) is disabled
         assumeFalse(
             testCandidate.getTeardownSection().getSkipSection().getSkipMessage(testCandidate.getSuitePath()),
-            testCandidate.getTeardownSection().getSkipSection().skip(restTestExecutionContext.esVersion())
+            testCandidate.getTeardownSection().getSkipSection().skip(oldestNodeVersion)
         );
         // skip test if test section is disabled
         assumeFalse(
             testCandidate.getTestSection().getSkipSection().getSkipMessage(testCandidate.getTestPath()),
-            testCandidate.getTestSection().getSkipSection().skip(restTestExecutionContext.esVersion())
+            testCandidate.getTestSection().getSkipSection().skip(oldestNodeVersion)
         );
         // skip test if os is excluded
         assumeFalse(
@@ -485,11 +490,12 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
         );
 
         final Settings globalTemplateSettings = getGlobalTemplateSettings(testCandidate.getTestSection().getSkipSection().getFeatures());
-        if (globalTemplateSettings.isEmpty() == false) {
+        if (globalTemplateSettings.isEmpty() == false && ESRestTestCase.has(ProductFeature.LEGACY_TEMPLATES)) {
+
             final XContentBuilder template = jsonBuilder();
             template.startObject();
             {
-                template.startArray("index_patterns").value("*").endArray();
+                template.array("index_patterns", "*");
                 template.startObject("settings");
                 globalTemplateSettings.toXContent(template, ToXContent.EMPTY_PARAMS);
                 template.endObject();
@@ -498,7 +504,7 @@ public abstract class ESClientYamlSuiteTestCase extends ESRestTestCase {
 
             final Request request = new Request("PUT", "/_template/global");
             request.setJsonEntity(Strings.toString(template));
-            // Because this has not yet transitioned to a composable template, it's possible that
+            // Because not all case have transitioned to a composable template, it's possible that
             // this can overlap an installed composable template since this is a global (*)
             // template. In order to avoid this failing the test, we override the warnings handler
             // to be permissive in this case. This can be removed once all tests use composable
